# Quorum

./: .gitignore  DEPLOY.md  Quorum_Blog_Post.md  Quorum_Investor_Brief.docx  Quorum_Video_Script.md  README.md  TESTING.md  docker-compose.yml  render.yaml
backend/: .env.example  cognee_service.py  config.py  conftest.py  database.py  db_models.py  dependencies.py  github_service.py  main.py  metrics_simulator.py  models.py  pytest.ini  quorum_engine.py  requirements.txt  test_auth.py  test_quorum.db-journal
backend/auth/: router.py  schemas.py  service.py
backend/chat/: router.py  service.py
backend/sources/: router.py  service.py
backend/tests/: test_smoke.py
backend/tests/integration/: test_auth_api.py  test_chat_api.py  test_memory_api.py  test_monitor_api.py  test_security_and_ws.py  test_simulate_rollback_graph_api.py  test_sources_api.py  test_users_api.py
backend/tests/unit/: test_auth_service.py  test_chat_service.py  test_cognee_service.py  (+6 more)
backend/users/: router.py
cognee-vellum-integration/: README.md  pyproject.toml
cognee-vellum-integration/cognee_integration_vellum/: nodes.py  tools.py
cognee-vellum-integration/examples/: support_assistant.py
cognee-vellum-integration/tests/: conftest.py
demo_data/: seed_incidents.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: middleware.ts
integrations/: inventory.yml
submission/: BLOG_POST.md  DEMO_VIDEO_SCRIPT.md  FIXES_BEFORE_SUBMIT.md  HACKATHON_SUBMISSION.md  INVESTOR_PITCH.md  PR_FOR_COGNEE.md  TODAY_ACTION_LIST.md
(+36 files in other folders)
