[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognee-integration-vellum"
version = "0.1.0"
description = "Cognee persistent memory nodes and tools for Vellum Workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["cognee", "vellum", "memory", "knowledge-graph", "llm", "workflows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cognee>=1.2.2,<1.3.0",
    "vellum-ai>=0.14.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/topoteretes/cognee-integrations"
Repository = "https://github.com/topoteretes/cognee-integrations"

[tool.hatch.build.targets.wheel]
packages = ["cognee_integration_vellum"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
